--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,6 +15,8 @@
 	<p>ユーザ名：<span th:text="${user.name}"></span></p>
 	<p>メールアドレス：<span th:text="${user.email}"></span></p>
 	
+	<a href="/admin" sec:authorize="hasAuthority('ADMIN')">管理者用画面へ</a>
+	
 	<form th:action="@{/logout}" method="post">
 		<input type="submit" value="ログアウト">
 	</form>
